--- a/pom.xml
+++ b/pom.xml
@@ -82,4 +82,17 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <finalName>com.wei.springcloud</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
