--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-consumer-order80</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
@@ -89,6 +90,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- Cannot resolve plugin org.springframework.boot:spring-boot-maven-plugin:<unknown> -->
+                <version>2.2.5.RELEASE</version>
                 <configuration>
                     <fork>true</fork>
                     <addResources>true</addResources>
