--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -22,3 +22,6 @@ eureka:
     service-url:
 #      defaultZone: http://localhost:7001/eureka #单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #高可用版
+  instance:
+    instance-id: consumer80
+    prefer-ip-address: true
