--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -22,3 +22,6 @@ eureka:
     service-url:
 #      defaultZone: http://localhost:7001/eureka #单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #高可用版
+  instance:
+    instance-id: payment8002  #隐藏服务实例所在服务器的主机名
+    prefer-ip-address: true  #显示服务实例所在的ip地址
