--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -25,3 +25,7 @@ eureka:
   instance:
     instance-id: payment8002  #隐藏服务实例所在服务器的主机名
     prefer-ip-address: true  #显示服务实例所在的ip地址
+    #修改客户端向服务端发送心跳的周期时间（默认30秒）为1秒
+    lease-renewal-interval-in-seconds: 1
+    #Eureka服务端收到最后一次心跳后等待时间上限（默认90秒），超时将剔除服务
+    lease-expiration-duration-in-seconds: 2
