--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-provider-payment8004</module>
         <module>cloud-consumer-order80</module>
+        <module>cloud-zk-consumer-order80</module>
         <module>cloud-api-commons</module>
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
