无关紧要的调整

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>cloud-provider-payment8002</module>
         <module>cloud-provider-payment8004</module>
         <module>cloud-provider-payment8006</module>
-        <module>cloud-consumer-order80</module>
+        <module>cloud-eureka-consumer-order80</module>
         <module>cloud-zk-consumer-order80</module>
         <module>cloud-consul-consumer-order80</module>
         <module>cloud-api-commons</module>
