--- a/cloud-eureka-consumer-order80/pom.xml
+++ b/cloud-eureka-consumer-order80/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-consumer-order80</artifactId>
+    <artifactId>cloud-eureka-consumer-order80</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
