--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-feign-consumer-order80</module>
+        <module>cloud-provider-feign-hystrix-payment8001</module>
+        <module>cloud-feign-hystrix-consumer-order80</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
