--- a/cloud-hystrix-dashboard9001/src/main/resources/application.yml
+++ b/cloud-hystrix-dashboard9001/src/main/resources/application.yml
@@ -13,7 +13,7 @@ eureka:
 #      defaultZone: http://localhost:7001/eureka #单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #高可用版
   instance:
-    instance-id: payment8001
+    instance-id: hystrix-dashboard9001
     prefer-ip-address: true
     #修改客户端向服务端发送心跳的周期时间（默认30秒）为1秒
     lease-renewal-interval-in-seconds: 1
