--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -6,7 +6,20 @@ spring:
     name: cloud-gateway-service
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true #开启从注册中心动态开启路由的功能，利用微服务名进行路由
       routes:
+        - id: payment_lb #路由的id，没有固定的规则要求但是要求唯一，建议配合服务名设置
+          uri: lb://cloud-payment-service  #路由匹配后进行服务的地址
+          predicates:
+            - Path=/payment/selfLoadBalance/showServerport   #断言，路径相匹配则进行路由
+
+        - id: payment_lb2 #路由的id，没有固定的规则要求但是要求唯一，建议配合服务名设置
+          uri: lb://cloud-payment-service  #路由匹配后进行服务的地址
+          predicates:
+            - Path=/payment/selfLoadBalance/showServerport   #断言，路径相匹配则进行路由
+
         - id: payment_routh #路由的id，没有固定的规则要求但是要求唯一，建议配合服务名设置
           uri: http://localhost:8001  #路由匹配后进行服务的地址
           predicates:
