gateway断言配置参数设置

--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -19,6 +19,14 @@ spring:
           uri: lb://cloud-payment-service  #路由匹配后进行服务的地址
           predicates:
             - Path=/payment/selfLoadBalance/showServerport   #断言，路径相匹配则进行路由
+            - After=2017-01-20T17:42:47.789-07:00[America/Denver]
+            - Cookie=chocolate, ch.p
+            - Header=X-Request-Id, \d+
+            - Host=**.somehost.org,**.anotherhost.org
+            - Method=GET,POST
+            - Query=green
+            - RemoteAddr=192.168.1.1/24
+            # 官网地址：https://docs.spring.io/spring-cloud-gateway/docs/current/reference/html/#gateway-request-predicates-factories
 
         - id: payment_routh #路由的id，没有固定的规则要求但是要求唯一，建议配合服务名设置
           uri: http://localhost:8001  #路由匹配后进行服务的地址
