--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>cloud-feign-hystrix-consumer-order80</module>
         <module>cloud-hystrix-dashboard9001</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-config3344</module>
+        <module>cloud-config-config3355</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
