config配置中心动态刷新配置-另一台config client搭建

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>cloud-gateway-gateway9527</module>
         <module>cloud-config-config3344</module>
         <module>cloud-config-config3355</module>
+        <module>cloud-config-config3366</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
