--- a/cloud-config-config3344/src/main/resources/application.yml
+++ b/cloud-config-config3344/src/main/resources/application.yml
@@ -14,7 +14,14 @@ spring:
           search-paths:
             # 配置文件所在的目录地址
             - service-config
+          timeout: 50
+          skip-ssl-validation: true
       label: master
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
@@ -30,3 +37,10 @@ eureka:
     lease-renewal-interval-in-seconds: 1
     #Eureka服务端收到最后一次心跳后等待时间上限（默认90秒），超时将剔除服务
     lease-expiration-duration-in-seconds: 2
+
+#暴露项目可被监控的断点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
