--- a/cloud-config-config3366/src/main/resources/bootstrap.yml
+++ b/cloud-config-config3366/src/main/resources/bootstrap.yml
@@ -11,6 +11,11 @@ spring:
       name: config #配置文件的名称
       profile: test #读取后缀的名称
       # 以上配置相当于请求：http://localhost:3344/master/config-test.yml
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
