--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>cloud-config-config3344</module>
         <module>cloud-config-config3355</module>
         <module>cloud-config-config3366</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
