--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>cloud-config-config3355</module>
         <module>cloud-config-config3366</module>
         <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
