--- a/cloud-eureka-consumer-order80/pom.xml
+++ b/cloud-eureka-consumer-order80/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
