--- a/cloud-eureka-consumer-order80/src/main/resources/application.yml
+++ b/cloud-eureka-consumer-order80/src/main/resources/application.yml
@@ -4,12 +4,17 @@ server:
 spring:
   application:
     name: cloud-consumer-service
+  zipkin:
+    base-url: http://localhost:9411
+    sleuth:
+      sampler:
+        probability: 1 #采样率介于0到1 1表示全部采样
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: ze1bw0,7E[9V
-    url: jdbc:mysql://192.168.59.131:3306/cloud2020?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://172.16.0.185:3306/cloud2020?useUnicode=true&characterEncoding=utf-8&useSSL=false
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
