--- a/cloud-nacos-config-config3377/src/main/resources/bootstrap.yml
+++ b/cloud-nacos-config-config3377/src/main/resources/bootstrap.yml
@@ -11,3 +11,5 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yaml
+#        group: group1
+        group: group2
