--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>cloud-nacos-provider-payment9006</module>
         <module>cloud-nacos-consumer-order90</module>
         <module>cloud-nacos-config-config3377</module>
+        <module>cloud-nacos-config-config3388</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
