--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>cloud-nacos-consumer-order90</module>
         <module>cloud-nacos-config-config3377</module>
         <module>cloud-nacos-config-config3388</module>
+        <module>cloud-sentinel-service8401</module>
     </modules>
 
     <!-- 统计管理jar包版本 -->
